--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     cursor:pointer;
   }
 
-  /* MODAL (Quote / Verbal) */
+  /* MODAL */
   .modal{
     display:none;
     position:fixed;
@@ -267,6 +267,24 @@
     line-height:1.35;
   }
   .vSmall b{ color:#000; }
+
+  /* Preset buttons row */
+  .presetRow{
+    display:flex;
+    gap:10px;
+    flex-wrap:wrap;
+    margin-bottom:10px;
+  }
+  .presetRow button{
+    flex:1 1 140px;
+    border:none;
+    border-radius:10px;
+    padding:10px 12px;
+    font-weight:900;
+    cursor:pointer;
+    background:var(--blue);
+    color:#fff;
+  }
 
   /* PRINT ONLY MODAL CONTENT */
   @media print{
@@ -552,8 +570,34 @@
       </div>
 
       <div class="section">
+        <div class="section-title">Acreage Pricing (Quick Presets)</div>
+        <div class="subnote">Enter acres, then tap a preset to auto-fill $/acre (you can edit it).</div>
+
+        <div class="grid2">
+          <div>
+            <label>Acres</label>
+            <input id="c_acres" type="number" inputmode="decimal" placeholder="0" />
+          </div>
+          <div>
+            <label>$ per Acre</label>
+            <input id="c_perAcre" type="number" inputmode="decimal" placeholder="0" />
+          </div>
+        </div>
+
+        <div class="presetRow">
+          <button type="button" onclick="setClearPreset('light')">LIGHT</button>
+          <button type="button" onclick="setClearPreset('medium')">MEDIUM</button>
+          <button type="button" onclick="setClearPreset('heavy')">HEAVY</button>
+        </div>
+
+        <div class="subnote">
+          Current default presets: Light $2,000/acre • Medium $3,000/acre • Heavy $4,000/acre (edit anytime).
+        </div>
+      </div>
+
+      <div class="section">
         <div class="section-title">Tree Clearing</div>
-        <div class="subnote">Uses the same tree pricing we’ve been using: Small/Medium/Large per tree.</div>
+        <div class="subnote">Tree pricing: Small/Medium/Large per tree.</div>
         <div class="grid2">
           <div>
             <label>Tree Count</label>
@@ -1008,7 +1052,22 @@ Terms: ${dt.terms}`;
 }
 
 /* ------------------ LAND CLEARING ------------------ */
+function setClearPreset(which){
+  // You can change these preset numbers anytime
+  const presets = {
+    light: 2000,
+    medium: 3000,
+    heavy: 4000
+  };
+  const val = presets[which] ?? 0;
+  document.getElementById('c_perAcre').value = val;
+}
+
 function calcClear(){
+  const acres = n('c_acres');
+  const perAcre = n('c_perAcre');
+  const acreTotal = acres * perAcre;
+
   const trees = n('c_treeCount');
   const treeRate = n('c_treeSize');
   const treeTotal = trees * treeRate;
@@ -1024,7 +1083,7 @@ function calcClear(){
 
   const markupPct = n('c_markup');
 
-  const materials = treeTotal + brush + haulTotal;
+  const materials = acreTotal + treeTotal + brush + haulTotal;
   const laborSite = laborBase;
 
   let subtotal = materials + laborSite;
@@ -1036,6 +1095,7 @@ function calcClear(){
     customer: document.getElementById('c_customer').value || '',
     job: document.getElementById('c_job').value || '',
     location: document.getElementById('c_location').value || '',
+    acres, perAcre, acreTotal,
     trees, treeRate, treeTotal,
     brush,
     haulTotal,
@@ -1049,7 +1109,7 @@ function showClearVerbal(){
   const r = calcClear();
   const dt = depositAndTerms(r.total);
 
-  const materialsTotal = r.treeTotal + r.brush + r.haulTotal;
+  const materialsTotal = r.acreTotal + r.treeTotal + r.brush + r.haulTotal;
 
   const html = `
     <div class="vCard">
@@ -1061,6 +1121,7 @@ function showClearVerbal(){
         <b>Location:</b> ${escapeHtml(r.location || "—")}<br><br>
 
         <b>Quick breakdown:</b><br>
+        Acreage (${r.acres || 0} ac @ ${money(r.perAcre)}/ac): ${money(r.acreTotal)}<br>
         Trees: ${money(r.treeTotal)}<br>
         Brush/Light Clearing: ${money(r.brush)}<br>
         Hauling/Mobilization: ${money(r.haulTotal)}<br>
@@ -1082,6 +1143,7 @@ Location: ${r.location || "—"}
 TOTAL: ${money(r.total)}
 
 Quick breakdown:
+- Acreage (${r.acres || 0} ac @ ${money(r.perAcre)}/ac): ${money(r.acreTotal)}
 - Trees: ${money(r.treeTotal)}
 - Brush/Light Clearing: ${money(r.brush)}
 - Hauling/Mobilization: ${money(r.haulTotal)}
@@ -1098,7 +1160,7 @@ function showClearQuote(){
   const r = calcClear();
   const dt = depositAndTerms(r.total);
 
-  const materialsTotal = r.treeTotal + r.brush + r.haulTotal;
+  const materialsTotal = r.acreTotal + r.treeTotal + r.brush + r.haulTotal;
 
   const html = `
     <h1 class="qTitle">Crest View Construction LLC</h1>
@@ -1113,10 +1175,14 @@ function showClearQuote(){
     <h2>Materials / Site Costs</h2>
     <table class="qTable">
       <tr><th>Description</th><th class="qRight">Amount</th></tr>
+      <tr>
+        <td>Acreage Clearing (${r.acres || 0} ac @ ${money(r.perAcre)}/ac)</td>
+        <td class="qRight">${money(r.acreTotal)}</td>
+      </tr>
       <tr><td>Tree Clearing (${r.trees || 0} @ ${money(r.treeRate)}/tree)</td><td class="qRight">${money(r.treeTotal)}</td></tr>
       <tr><td>Brush / Light Clearing</td><td class="qRight">${money(r.brush)}</td></tr>
       <tr><td>Hauling / Mobilization</td><td class="qRight">${money(r.haulTotal)}</td></tr>
-      <tr><td><b>Subtotal</b></td><td class="qRight"><b>${money(materialsTotal)}</b></td></tr>
+      <tr><td><b>Materials Subtotal</b></td><td class="qRight"><b>${money(materialsTotal)}</b></td></tr>
     </table>
 
     <h2>Labor / Site Work</h2>
@@ -1133,7 +1199,7 @@ function showClearQuote(){
     </div>
 
     <div class="qBox">
-      <b>Scope:</b> Land clearing including removal of trees/brush as specified, equipment operation, and basic site cleanup/restoration as agreed.
+      <b>Scope:</b> Land clearing including acreage clearing as specified, removal of trees/brush as needed, equipment operation, and basic site cleanup/restoration as agreed.
     </div>
 
     <div class="sigline"></div><div>Customer Signature</div>
