--- a/index.html
+++ b/index.html
@@ -1124,7 +1124,7 @@ function showClearVerbal(){
         Acreage (${r.acres || 0} ac @ ${money(r.perAcre)}/ac): ${money(r.acreTotal)}<br>
         Trees: ${money(r.treeTotal)}<br>
         Brush/Light Clearing: ${money(r.brush)}<br>
-        Hauling/Mobilization: ${money(r.haulTotal)}<br>
+        Haul off: ${money(r.haulTotal)}<br>
         Materials Subtotal: ${money(materialsTotal)}<br>
         Labor / Site Work: ${money(r.laborSite)}<br>
         Markup: ${r.markupPct.toFixed(0)}%<br><br>
