--- a/index.html
+++ b/index.html
@@ -1146,7 +1146,7 @@ Quick breakdown:
 - Acreage (${r.acres || 0} ac @ ${money(r.perAcre)}/ac): ${money(r.acreTotal)}
 - Trees: ${money(r.treeTotal)}
 - Brush/Light Clearing: ${money(r.brush)}
-- Hauling/Mobilization: ${money(r.haulTotal)}
+- Hauling off: ${money(r.haulTotal)}
 - Labor/Site: ${money(r.laborSite)}
 - Markup: ${r.markupPct.toFixed(0)}%
 
