--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
       </div>
 
       <div class="section">
-        <div class="section-title">Hauling / Mobilization (optional)</div>
+        <div class="section-title">Haul off (optional)</div>
         <div class="subnote">Cents per mile × round trip. Use for debris hauling, equipment moving, etc.</div>
         <div class="grid2">
           <div>
